--- a/index.html
+++ b/index.html
@@ -9,6 +9,36 @@
     <title>Calculator Project</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="display">
+            <input type="text" name="display" id="display">
+        </div>
+        <div class="first-row">
+            <button>C</button>
+            <button>/</button>
+        </div>
+        <div class="second-row">
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>x</button>
+        </div>
+        <div class="third-row">
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>-</button>
+        </div>
+        <div class="fourth-row">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>+</button>
+        </div>
+        <div class="fifth-row">
+            <button>0</button>
+            <button>=</button>
+        </div>
+    </div>
 </body>
 </html>
